2009-12-08  Chris Toshok  <toshok@ximian.com>

	* plugin.cpp: add a toggle button to the Properties dialog to map
	between gdk keyvals and windows platform keycodes.

2009-12-07  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: Put the "Reinstall media pack" into an DEBUG #ifdef.
	It causes us to crash if we've already loaded the codecs into the
	processes.

2009-12-08  Chris Toshok  <toshok@ximian.com>

	* silverlight-versions.h.in: new file.

	* moonlight.h: include silverlight-versions.h and use those
	#defines instead of the strings for the TargetRuntime versions.

	* Makefile.am (EXTRA_DIST): add silverlight-versions.h.in

2009-11-26  Chris Toshok  <toshok@ximian.com>

	* plugin.cpp (PluginInstance::StreamAsFile): remove the source
	setting from here because it has to happen both with xaps and xaml
	files.
	(PluginInstance::UpdateSource): it needs to happen here.  in the
	case where we aren't calling SetPageUrl, we need to need to worry
	about relative/absolute urls.  lots of comments added.  should fix
	the three different problematic splash scenarios I've found (2
	telerik demos and the sl3 toolkit demo), and their relative url
	references.

2009-11-26  Chris Toshok  <toshok@ximian.com>

	* plugin.cpp (PluginInstance::StreamAsFile): set the source
	location to the xaml file when parsing the splash screen so that
	urls are resolved correctly for images/etc during the loading
	process.  Set it back again afterward.
	(PluginInstance::LoadSplash): when loading the splash we need to
	allow separators at the end of the urls so that relative urls are
	resolved correctly.

2009-11-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.mdp: Updated with new files.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* cbinding.h: Regenerated.

	* plugin-class.h.in: Add changes to the .in file too so that the
	changes survive the generator.

2009-11-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>
