@@ -16,7 +16,7 @@
 #include "npstream-request.h"
 
 void
-npstream_request_set_stream_data (Downloader *downloader, NPP npp, NPStream *stream)
+NPStreamRequest::SetStreamData (Downloader *downloader, NPP npp, NPStream *stream)
 {
 	PluginDownloader *pd = (PluginDownloader *) downloader->GetDownloaderState ();
 
@@ -24,18 +24,29 @@ npstream_request_set_stream_data (Downloader *downloader, NPP npp, NPStream *str
 		NPStreamRequest *req = (NPStreamRequest *) pd->getRequest ();
 		
 		if (req != NULL) {
-			req->SetNPP (npp);
-			req->SetStream (stream);
+			req->stream = stream;
 		}
 	}
 	stream->pdata = pd;
 }
 
+const bool
+NPStreamRequest::IsAborted ()
+{
+	return this->aborted;
+}
+
+void
+NPStreamRequest::StreamDestroyed ()
+{
+	stream = NULL;
+}
+
 void
 NPStreamRequest::Abort ()
 {
-	if (npp != NULL && stream != NULL) {
-		NPN_DestroyStream (npp, stream, NPRES_USER_BREAK);
+	if (instance != NULL && stream != NULL) {
+		NPN_DestroyStream (instance->GetInstance (), stream, NPRES_USER_BREAK);
 		stream = NULL;
 	}
 }
